...
    <string name="built_year">Built year</string>
    <string name="model">Model</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="registration_number">Registration number</string>
    <string name="vehicle_type">Vehicle type</string>
    <string name="title_activity_garage">Garage</string>
    <string name="empty_garage">You don\'t have any vehicle yet.</string>
    <string name="add_vehicle_button">Click here to add a new vehicle</string>
    <string name="new_record_service_title">Enter service expenses</string>
    <string name="new_record_fuel_title">Type refill expenses</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="zero">0</string>
...
    <string name="fuel">Fuel</string>
    <string name="service">Service</string>
    <string name="vehicle_choice">Select vehicle for record</string>
    <string-array name="vehicle_type">
        <item>Car</item>
        <item>Motorbike</item>
        <item>Truck</item>
    </string-array>
</resources>

